--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,67 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
+  font-family: "Helvetica";
+  color: #444;
+}
+
+a {
+  text-decoration: none;
+  color: #444;
+  transition: 0.4s;
+}
+
+a:hover {
+  color: #dec129;
+}
+
+/* FORM */
+
+form {
+  width: 450px;
+  margin: 0 auto;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+.form-group label {
+  font-weight: bold;
+  font-size: 1em;
+  margin-bottom: 0.4em;
+}
+
+.form-group input,
+.form-group textarea {
+  padding: 0.6em;
+  color: #777;
+  font-size: 1em;
+}
+
+input[type="submit"] {
+  background-color: #efefef;
+  border: 2px solid transparent;
+  padding: 0.6em 1em;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.4s;
+}
+
+input[type="submit"]:hover {
+  color: #dec129;
+  border-color: #dec129;
+  background: transparent;
+}
+
+.validation-error p {
+  color: #dc3545;
+  margin-top: 0.4em;
+  border-left: 3px solid #dc3545;
+  padding-left: 0.2em;
+}
