--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -19,7 +19,7 @@
         />
         <h3>{{ moment.title }}</h3>
         <p class="date">Em: {{ moment.created_at }}</p>
-        <p>Comentários: {{ moment.coments?.length }}</p>
+        <p>Comentários: {{ moment.comments?.length }}</p>
         <p><a routerLink="moments/{{ moment.id }}">Detalhes</a></p>
       </div>
     </div>
